@@ -163,6 +163,7 @@ AC_BINDLE_GIT_PACKAGE_VERSION([contrib/bindletools/build-aux/git-package-version
 
 # custom configure options
 AC_BINDLE_ENABLE_WARNINGS
+AC_SCU_EGG
 AC_SCU_PREFIX
 AC_SCU_SYMLINKS
 AC_SCU_WIDGET_TAIL
